WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204496
Fix missing exception check in replaceUsingStringSearch().
https://bugs.webkit.org/show_bug.cgi?id=204496
Summary
Fix missing exception check in replaceUsingStringSearch().
Mark Lam
Reported
2019-11-22 01:49:00 PST
This was caught by existing JSC stress tests when we run with a debug build. Unfortunately, the EWS only runs with a release build.
Attachments
proposed patch.
(2.09 KB, patch)
2019-11-22 02:10 PST
,
Mark Lam
ysuzuki
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2019-11-22 02:10:02 PST
Created
attachment 384134
[details]
proposed patch.
Yusuke Suzuki
Comment 2
2019-11-22 02:37:28 PST
Comment on
attachment 384134
[details]
proposed patch. r=me
Mark Lam
Comment 3
2019-11-22 03:34:03 PST
Thanks for the review. Landed in
r252767
: <
http://trac.webkit.org/r252767
>.
Radar WebKit Bug Importer
Comment 4
2019-11-22 03:35:16 PST
<
rdar://problem/57425315
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug