Fix missing exception check in replaceUsingStringSearch(). https://bugs.webkit.org/show_bug.cgi?id=204496

Reviewed by Yusuke Suzuki.

The CachedCall constructor can throw OutOfMemory or StackOverflow errors.
This was caught by existing JSC stress tests when we run with a debug build.

Also placate the exception check validator in $vm's functionCallWithStackSize().

* runtime/StringPrototype.cpp:
(JSC::replaceUsingStringSearch):
* tools/JSDollarVM.cpp:
(JSC::functionCallWithStackSize):



Canonical link: https://commits.webkit.org/217746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252767 268f45cc-cd09-0410-ab3c-d52691b4dbfc